--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,10 @@
 {
-  "singleQuote": true
+    "singleQuote": false,
+    "tabWidth": 4,
+    "trailingComma": "all",
+    "arrowParens": "always",
+    "printWidth": 80,
+    "semi": false,
+    "bracketSpacing": true,
+    "endOfLine": "lf"
 }
