--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,8 +16,10 @@
         "skipDefaultLibCheck": true,
         "baseUrl": ".",
         "paths": {
-            "@aspect/core": ["packages/core/src/index.ts"]
-        }
+            "@aspect/core": ["packages/core/src/index.ts"],
+            "@aspect/store": ["packages/store/src/index.ts"]
+        },
+        "strict": true
     },
     "exclude": ["node_modules", "tmp"]
 }
