--- a/nx.json
+++ b/nx.json
@@ -31,6 +31,9 @@
         },
         "store": {
             "tags": []
+        },
+        "fsm": {
+            "tags": []
         }
     },
     "workspaceLayout": {
